<resources>
    <string name="app_name">오리</string>
    <string name="textview">테스트용텍스트뷰.</string>
    <string name="edittext">테스트용에디트텍스트.</string>
    <string name="app_text1">이것은 오리입니다.</string>
    <string name="app_text2">정말 예쁜 오리입니다.</string>
    <string name="on">버튼ON</string>
    <string name="off">버튼OFF</string>
    <string name="milk">우유</string>
    <string name="sugar">설탕</string>
    <string name="rtxt1">원시인</string>
    <string name="rtxt2">우주인</string>
    <string name="starbuzz_logo">스타버즈로고</string>
    <string name="click_me">클릭하세요</string>
    <string-array name="spinner_values">
        <item>밝은색</item>
        <item>어두운색</item>
        <item>호박색</item>
        <item>갈색</item>
        <item>초록색</item>
    </string-array>
</resources>